# advent-of-code

./: .gitignore  replit.nix
2021/day1/: CountDepthInc.hs  CountDepthIncSpec.hs  test.txt
2021/day2/: DiveSpec.hs
2021/day3/: BinaryDiag.hs  BinaryDiagSpec.hs
2021/day4/: Bingo.hs  BingoSpec.hs  test-col-win.txt  test.txt
2021/haskell/: .ghc.environment.x86_64-darwin-8.10.7  README.md  cabal.project
2021/haskell/day1/: CountDepthInc.hs  CountDepthIncSpec.hs  day1.cabal
2021/haskell/day2/: Dive.hs  DiveSpec.hs  day2.cabal
2021/haskell/day3/: BinaryDiagSpec.hs  day3.cabal
2021/haskell/day4/: Bingo.hs  BingoSpec.hs  day4.cabal  trim.hs
2021/haskell/day5/: HydrothermalVenture.hs  HydrothermalVentureSpec.hs  day5.cabal
2021/haskell/day6/: LanternFish.hs  LanternFishSpec.hs  Split.hs  day6.cabal
2021/haskell/day7/: MoveCrabs.hs  MoveCrabsSpec.hs  day7.cabal  small-test.txt
2021/haskell/day8/: SevenSegmentSearch.hs  SevenSegmentSearchSpec.hs  day8.cabal
2021/rust/src/: helpers.rs
2021/scala/: DumboOctopus2.txt  build.sbt
2021/scala/src/main/resources/day12/: input.txt  test-2.txt  test-small.txt
2021/scala/src/main/scala/day10/: SyntaxScorer.scala
2021/scala/src/main/scala/day11/: DumboOctopus.scala
2021/scala/src/main/scala/day12/: PassagePaths.scala
2021/scala/src/main/scala/day8/: SevenSegmentSearch.scala
2021/scala/src/main/scala/day9/: LavaTubes.scala
2021/scala/src/test/scala/day10/: SyntaxScorerSpec.scala
2021/scala/src/test/scala/day11/: DumboOctopusSpec.scala
2021/scala/src/test/scala/day12/: PassagePathsSpec.scala
2021/scala/src/test/scala/day8/: SevenSegmentSearchSpec.scala
2021/scala/src/test/scala/day9/: LavaTubesSpec.scala
2022/rust/: 09.docx  Cargo.toml  README.md  puzzle_8.md
2022/rust/src/: helpers.rs
2022/rust/src/examples/: 71.txt  81.txt  82.txt
