cabal-version:      2.4
name:               day6
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Pete Anning
maintainer:         peteanning@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable day6
    main-is: LanternFish.hs

    -- Modules included in this executable, other than Main.
    other-modules: LanternFishSpec, Split

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, hspec, containers ^>=0.6.5.1
    hs-source-dirs:   .
    default-language: Haskell2010

test-suite day6Spec
    main-is: LanternFishSpec.hs 
    other-modules: LanternFish, Split
    type: exitcode-stdio-1.0
    build-depends: base, hspec, containers



